[tool.poetry]
name = "securing-chroma-ssl-certs"
version = "0.1.0"
description = ""
authors = ["Trayan Azarov <trayan.azarov@amikos.tech>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
chromadb = {git = "https://github.com/amikos-tech/chroma-core.git", rev = "main"}
jupyter = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
